--- a/.github/workflows/connect.yml
+++ b/.github/workflows/connect.yml
@@ -5,9 +5,14 @@ jobs:
   login:
     runs-on: ubuntu:latest
     steps:
-      -
-        name: Login to Docker Hub
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build Image
+        run: docker build -t mangan21/project4 .
+
+      - name: Push Image
+        run: docker push mangan21/project4
