--- a/.github/workflows/connect.yml
+++ b/.github/workflows/connect.yml
@@ -3,7 +3,7 @@ on:
     branches: main
 jobs:
   login:
-    runs-on: ubuntu:latest
+    runs-on: ubuntu-latest
     steps:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
