--- a/.github/workflows/connect.yml
+++ b/.github/workflows/connect.yml
@@ -11,8 +11,8 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build Image
-        run: docker build -t mangan21/project4 -f Dockerfile
-
-      - name: Push Image
-        run: docker push mangan21/project4
+      - name: Build and Push
+        uses: docker/build-push-action@v5
+        with:
+          push: true
+          tags: mangan21/project4:latest
