--- a/.github/workflows/connect.yml
+++ b/.github/workflows/connect.yml
@@ -5,6 +5,12 @@ jobs:
   login:
     runs-on: ubuntu-latest
     steps:
+      - name: QEMU
+        uses: docker/setup-qemu-action@v3
+    
+      - name: Buildx
+        uses: docker/setup-buildx-action@v3
+        
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
