--- a/.github/workflows/connect.yml
+++ b/.github/workflows/connect.yml
@@ -1,12 +1,32 @@
 on:
   push:
+    branches:
+      - 'main'
     tags:
-      - '**'
+      - 'v*'
+  pull_request:
+    branches:
+      - 'main'
 jobs:
   login:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-actions@v5
+        with:
+          images: mangan21/project4
+          tags:
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}.{{patch}}
+        
       - name: Login to Docker Hub
+        if: github.event_name != 'pull_request'
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
@@ -15,5 +35,7 @@ jobs:
       - name: Build and Push
         uses: docker/build-push-action@v5
         with:
-          push: true
-          tags: mangan21/project4:latest
+          context: .
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
