--- a/.github/workflows/connect.yml
+++ b/.github/workflows/connect.yml
@@ -23,7 +23,7 @@ jobs:
             type=ref,event=branch
             type=ref,event=pr
             type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}.{{patch}}
+            type=semver,pattern={{major}}.{{minor}}
         
       - name: Login to Docker Hub
         if: github.event_name != 'pull_request'
